# mc_rtc-blender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py  blender_imgui.py  interactive_markers.py  operators.py  panels.py
src/: BlenderClient.cpp  BlenderClient.h  Category.cpp  Category.h  Client.cpp  Client.h  Interface3D.h  Widget.h  imgui_config.h  mc_rtc_blender.cpp
src/assets/: Robot_Regular_ttf.h
src/widgets/: ArrayInput.h  ArrayLabel.h  Arrow.h  Button.h  Checkbox.h  ComboInput.h  DataComboInput.h  Force.h  Form.h  IntegerInput.h  Label.h  NumberInput.h  NumberSlider.h  Point3D.cpp  Point3D.h  Polygon.h  Robot.cpp  Robot.h  Rotation.h  Schema.cpp  Schema.h  StringInput.h  Table.h  Trajectory.h  Transform.h  Widget.h  XYTheta.h
src/widgets/details/: ControlAxis.h  InteractiveMarker.h  SingleInput.h  TransformBase.h
src/widgets/form/: schema.cpp  schema.h  widgets.cpp  widgets.h
